--- a/CineTicket/src/main.css
+++ b/CineTicket/src/main.css
@@ -45,9 +45,6 @@ h2 {
     color: #ffffff;
 }
 
-select {
-    display: block;
-}
 
 select {
     -moz-appearance: none;
@@ -75,8 +72,8 @@ select option:hover {
 }
 
 .select-wrapper {
-    /* ... */
     position: relative;
+    display: inline-block;
 }
 
 .select-wrapper::before {
@@ -85,9 +82,11 @@ select option:hover {
     font-size: 20px;
     position: absolute;
     right: 15px;
-    top: 10px;
+    top: 5px;
     color: #fff;
+    pointer-events: none;
 }
+
 
 .flexer{
     display: flex;
@@ -101,3 +100,15 @@ select option:hover {
 .leftrow, .rightrow{
     width: 50%;
 }
+.select-wrapper {
+    /* ... */
+    position: relative;
+  }
+  .select-wrapper::before {
+    content: '\f0d7';
+              color: black;
+              transition: all .25s;
+              font-family: 'Font Awesome 5 Free';
+              font-weight: 900;
+    
+  }
