--- a/CineTicket/src/main.css
+++ b/CineTicket/src/main.css
@@ -57,9 +57,10 @@ select {
     background-color: var(--lightgrey);
     color: #000;
     font-size: 1.5rem;
-    margin-bottom: 0.3rem;
+    
     outline: none;
     cursor: pointer;
+ 
 }
 
 select:active,
@@ -74,6 +75,7 @@ select option:hover {
 .select-wrapper {
     position: relative;
     display: inline-block;
+    margin-right: 2rem;
 }
 
 .select-wrapper::before {
@@ -95,7 +97,6 @@ select option:hover {
 
 #cinema .flexer select {
     width: 4rem;
-    margin-right: 2rem;
 }
 .leftrow, .rightrow{
     width: 50%;
@@ -110,5 +111,26 @@ select option:hover {
               transition: all .25s;
               font-family: 'Font Awesome 5 Free';
               font-weight: 900;
+             
     
+  }
+  .flex-center{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-content: center;
+  }
+  .icon{
+      width: 1.5rem;
+  }
+.pointer{
+cursor: pointer;
+}
+  .mb{
+      margin-bottom: 0.4rem;
+  }
+  .description label{
+      display: inline-block;
+width: 4rem;
+margin-right: 2rem;
   }
